--- a/InventarioPro/Client/Pages/Producto/FormProducto.razor
+++ b/InventarioPro/Client/Pages/Producto/FormProducto.razor
@@ -4,6 +4,7 @@
 @inject SweetAlertService swal
 @inject HttpClient Http
 @inject Radzen.DialogService DialogService
+@inject NavigationManager nav
 
 <style>
     .custom-dialog {
@@ -14,7 +15,7 @@
 
 <EditForm Model="@Product" OnValidSubmit="HandleValidSubmit">
     <DataAnnotationsValidator />
-    <div class="custom-dialog" style="margin: auto; padding: 20px; border: 1px solid #e0e0e0; border-radius: 8px; background-color: #f9f9f9;">
+    <div class="custom-dialog" style="margin: auto; padding: 20px; border: 1px solid #e0e0e0; border-radius: 8px; background-color: white;">
         <h3 class="text-center">@((Product.Id == 0) ? "Agregar Nuevo Producto" : "Modificar Producto")</h3>
 
         <div style="display: flex; gap: 20px;">
@@ -141,6 +142,7 @@
             var errorMessage = await response.Content.ReadAsStringAsync();
             await ShowAlert("Error", $"No se pudo {(Product.Id == 0 ? "crear" : "actualizar")} el producto: {errorMessage}", SweetAlertIcon.Error);
         }
+        nav.NavigateTo("/ListProductos");
     }
 
 
